src/main.tf
module "main_vpc" {
  source            = "./vpc"
  vpc_name          = "main"
  cidr_block_of_vpc = "10.0.0.0/16"
  cidr_block_of_subnets = {
    public_subnets = {
      ap-northeast-1a = {
        cidr_block = "10.0.1.0/24"
      }
      ap-northeast-1c = {
        cidr_block = "10.0.2.0/24"
      }
    }
    private_subnets = {
      ap-northeast-1a = {
        cidr_block = "10.0.11.0/24"
      }
      ap-northeast-1c = {
        cidr_block = "10.0.12.0/24"
      }
    }
  }
}

resource "aws_vpc_endpoint" "s3" {
  service_name      = "com.amazonaws.ap-northeast-1.s3"
  vpc_endpoint_type = "Gateway"
  vpc_id            = module.main_vpc.vpc.id
  route_table_ids   = [module.main_vpc.private_route_table_id]
}

module "vpc_endpoint_of_main_vpc" {
  for_each                     = toset(local.vpc_endpoint_services_for_ssm)
  source                       = "./vpc_endpoint"
  service_name_of_vpc_endpoint = each.value
  vpc_id                       = module.main_vpc.vpc.id
  cidr_blocks_of_ingress_rule  = [module.main_vpc.vpc.cidr_block]
  subnet_ids_of_vpc_endpoint   = [module.main_vpc.public_subnet_ids.ap-northeast-1c]
}

module "ec2" {
  source            = "./ec2"
  vpc_id            = module.main_vpc.vpc.id
  public_subnet_id  = module.main_vpc.public_subnet_ids.ap-northeast-1a
  private_subnet_id = module.main_vpc.private_subnet_ids.ap-northeast-1c
}
